Construção do CSS e inicio da padronização de arquivos.

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,10 +13,19 @@ body {
 
 /* Cabeçalho */
 .header {
-  background-color: #4a90e2;
+  background-color: #7b2cbf;
   color: #fff;
-  padding: 20px;
+  padding: 20px 40px;
+  border-radius: 12px;
   text-align: center;
+
+  width: 80%;
+  max-width: 750px;
+  margin: 10px auto;
+}
+
+h1 {
+  align-items: center;
 }
 
 /* Tamanho dos copos */
@@ -24,21 +33,73 @@ body {
   display: flex;
   justify-content: center;
   margin: 20px;
+  padding: 20px 40px;
+  border-radius: 12px;
+  text-align: center;
+  width: 80%;
+  max-width: 750px;
+  margin: 10px auto;
+}
+
+.size-img {
+  margin-bottom: 8px;
 }
 
 .size-btn {
+  display: flex;
+  flex-direction: column; /* Isso empilha imagem e texto verticalmente */
+  align-items: center;
+  justify-content: center;
   background-color: #fff;
-  border: 2px solid #4a90e2;
+  border: 2px solid #7b2cbf;
+  border-radius: 12px;
   padding: 10px;
   margin: 0 10px;
   font-size: 16px;
   cursor: pointer;
+  transition: .1s ease-in-out;
+  overflow: hidden;
+  width: 100px; /* opcional: define largura fixa para alinhamento */
+  height: 120px; /* opcional: define altura fixa para consistência */
+  text-align: center;
 }
 
 .size-btn:hover {
-  background-color: #4a90e2;
+  background-color: #7b2cbf;
   color: #fff;
+  scale: 1.1;
+  transition: .2s ease-in-out;
 }
+
+.size-btn.selected {
+  background-color: #7b2cbf;
+  color: #fff;
+  box-shadow: 0 0px 20px rgba(123, 44, 191, 0.4);
+  scale: 1.1;
+}
+
+/*ACOMPANHAMENTOS*/
+.acompanhamento-group {
+  margin-bottom: 20px;
+  padding: 15px;
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+}
+
+.acompanhamento-title {
+  font-weight: bold;
+  color: #7b2cbf;
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+.acompanhamento-group label {
+  display: block;
+  margin-bottom: 8px;
+  font-size: 15px;
+}
+
 
 /* Formulário de pedido */
 .order-form {
@@ -79,8 +140,25 @@ body {
   font-size: 16px;
   cursor: pointer;
   width: 100%;
+  margin-top: 10px;
 }
 
 .submit-btn:hover {
+  background-color: #357ab7;
+}
+
+.submit-btn-add {
+  background-color: #4a90e2;
+  color: #fff;
+  border: none;
+  padding: 12px;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.submit-btn-add:hover {
   background-color: #357ab7;
 }
