--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@ h1 {
   padding: 10px;
   margin: 0 10px;
   font-size: 16px;
+  font-weight: bold;
   cursor: pointer;
   transition: .1s ease-in-out;
   overflow: hidden;
@@ -78,10 +79,11 @@ h1 {
   scale: 1.1;
 }
 
-/*ACOMPANHAMENTOS*/
+
+/* ACOMPANHAMENTOS */
 .acompanhamento-group {
   margin-bottom: 20px;
-  padding: 15px;
+  padding: 10px;
   border: 2px solid #ddd;
   border-radius: 8px;
   background-color: #f9f9f9;
@@ -94,12 +96,35 @@ h1 {
   font-size: 16px;
 }
 
+
 .acompanhamento-group label {
-  display: block;
+  display: inline-block;
+  margin-right: 20px;
   margin-bottom: 8px;
   font-size: 15px;
 }
 
+.acompanhamento-items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+}
+
+.acompanhamento-items label {
+    display: flex;
+    align-items: center; 
+    gap: 5px; 
+    word-break: break-word;
+    cursor: pointer;
+    word-wrap: break-word; 
+    max-width: 100%;
+}
+
+/*Para Garantir que o checkbox não ocupa 100%*/
+.acompanhamento-items input[type="checkbox"] {
+  width: auto;
+  margin-bottom: 0;
+}
 
 /* Formulário de pedido */
 .order-form {
@@ -108,13 +133,12 @@ h1 {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 90%;
-  max-width: 400px;
+  max-width: 40vw;
   margin: 0 auto;
 }
 
 .order-form label {
-  font-weight: bold;
-  display: block;
+  font-weight: normal;
   margin: 10px 0 5px;
 }
 
